src/objects/DRDW_Cost_Center__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <label>Additional Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Center</label>
        <referenceTo>DRDW_Cost_Center__c</referenceTo>
        <relationshipLabel>DRDW Cost Centers</relationshipLabel>
        <relationshipName>DRDW_Cost_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DRDW Cost Center</label>
    <nameField>
        <label>Cost Center</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DRDW Cost Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>